# esp32-h2-rgb-controller

./: .gitignore  .gitmodules  CMakeLists.txt  idf_component.yml  sdkconfig
main/: CMakeLists.txt  esp32_h2_zigbee_led.c  esp32_h2_zigbee_led.h  idf_component.yml  main.c
